# url_shortener

./: Cargo.toml  README.md
fixtures/: test.db
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
src/server/: mod.rs
