[package]
name = "url_shortener"
version = "0.1.0"
authors = ["trivelle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.1.1"
fastrand = "1.4.1"
rusqlite = {version = "0.25.3", features = ["chrono"]}
chrono = {version = "0.4", features = ["serde"]}
scopeguard = "1.1.0"
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
serial_test = "0.5.1"
